crates/keron-lang/tests/corpus/errors/parse/type_alias_missing_pipe.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found '"' expected something else, '#', '|', '"from"', '"struct"', '"type"', '"val"', '"fn"', '"reconcile"', '"if"', '"for"', or end of input
  --> 1:20
  |
1 | type Color = "red" "green"
  |                    ^
